fixed profile buttons, stopped horizontal scrolling

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -1,6 +1,9 @@
 body {
     padding-top: 75px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
+
 
 .navbar-fixed-top {
     padding-right: 20px;
